[project]
name = "topic-modeling-bbcnews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "spacy==3.7.5",
    "wheel>=0.45.1",
    "wordcloud>=1.9.4",
    "yellowbrick>=1.5",
]
